# mail-checker

./: .gitignore  README.md  config.py  driver.py  pyproject.toml  rules.json
mail/: BaseActions.py  ReadActions.py  WriteActions.py  __init__.py  base_actions.py  read_actions.py  write_actions.py
mail/gmail/: base.py  read_actions.py  write_actions.py
oauth/google_auth/: constants.py  oauth.py
rule_engine/: action_field.py  base_field.py  constants.py  engine.py  filter_field.py
session/: base.py  queries.py
tests/: __init__.py  test-mail  test_001_session.py  test_002_ruleengine.py
tests/mock/: rule1.json
